源码来自开源项目https://github.com/shinezejian/emotionkeyboard 我主要是解决了键盘高度变化适应问题 并且重新封装了下代码

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -7,17 +7,15 @@
         android:id="@+id/btn_main_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="btn_main_editText"
         android:layout_margin="20dp"
-        />
+        android:text="@string/btn_edit_text" />
 
     <Button
         android:id="@+id/btn_main_listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="btn_main_listView"
         android:layout_margin="20dp"
-        />
+        android:text="@string/btn_list_view" />
 
 
 </LinearLayout>  
