--- a/src/main/res/layout/activity_edittext.xml
+++ b/src/main/res/layout/activity_edittext.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <EditText
-        android:id="@+id/et_emotion"
-        android:gravity="top"
-        android:layout_weight="1"
+        android:id="@id/et_input"
         android:layout_width="match_parent"
-        android:focusable="true"
         android:layout_height="0dp"
-        />
+        android:layout_weight="1"
+        android:focusable="true"
+        android:gravity="top" />
 
     <FrameLayout
         android:id="@+id/fl_emotionview_main"
