--- a/src/main/res/layout/fragment_complate_emotion.xml
+++ b/src/main/res/layout/fragment_complate_emotion.xml
@@ -9,18 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-
         android:gravity="center">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/vp_complate_emotion_layout"
+            android:id="@+id/vp_complete_emotion_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <com.zejian.emotionkeyboard.emotionkeyboardview.EmojiIndicatorView
+    <com.firo.emoji.emotionkeyboardview.EmotionIndicatorView
         android:id="@+id/ll_point_group"
         android:layout_width="match_parent"
         android:layout_height="30dp"
