--- a/src/main/res/layout/fragment_main_emotion.xml
+++ b/src/main/res/layout/fragment_main_emotion.xml
@@ -18,21 +18,22 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <com.zejian.emotionkeyboard.emotionkeyboardview.NoHorizontalScrollerViewPager
-            android:id="@+id/vp_emotionview_layout"
+        <com.firo.emoji.emotionkeyboardview.NoHorizontalScrollerViewPager
+            android:id="@+id/nsvp_emotion_main"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <LinearLayout
+        <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/bg_horizontal_line_color" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview_horizontal"
+            android:id="@+id/rv_bottom_tab"
             android:layout_width="match_parent"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"
+            android:background="#eee" />
 
     </LinearLayout>
 </LinearLayout>
